...
        var expanded by remember { mutableStateOf(false) }
        Text(text = "Goal Type:", color = mainTextColor)
        Box(
        ) {
            Button(onClick = { expanded = !expanded },
                modifier = Modifier
                    .border(1.dp, mainTextColor, shape = RoundedCornerShape(3.dp)).testTag("GoalDropdownMenu"),
                colors = ButtonDefaults.buttonColors(containerColor = Color(
                    0xFFE7E0EC
                )
                ), shape = RoundedCornerShape(3.dp)) {
                Text(text = goal_type, color = Color(0xFF606060))
                Icon(Icons.Filled.KeyboardArrowDown, contentDescription = "More options", tint = mainTextColor)
            }
            DropdownMenu(
                expanded = expanded,
                onDismissRequest = { expanded = false }
            ) {
                DropdownMenuItem(
                    modifier = Modifier.testTag("PercentageDropdownMenuItem"),
                    text = { Text("amount") },
                    onClick = {
                        goal_type="amount"
                        expanded = !expanded
                    }
                )
                DropdownMenuItem(
                    modifier = Modifier.testTag("PercentageDropdownMenuItem"),
                    text = { Text("percentage") },
                    onClick = {
                        goal_type="percentage"
                        expanded = !expanded
                    }
                )
            }
...
        var expanded by remember { mutableStateOf(false) }
        Text(text = "Time Period:", color = mainTextColor)
        Box(
        ) {
            Button(onClick = { expanded = !expanded },
                modifier = Modifier
                    .border(1.dp, mainTextColor, shape = RoundedCornerShape(3.dp)).testTag("PeriodDropdownMenu"),
                colors = ButtonDefaults.buttonColors(containerColor = Color(
                    0xFFE7E0EC
                )
                ), shape = RoundedCornerShape(3.dp)) {
                Text(text = period, color = Color(0xFF606060))
                Icon(Icons.Filled.KeyboardArrowDown, contentDescription = "More options", tint = mainTextColor)
            }
            DropdownMenu(
                expanded = expanded,
                onDismissRequest = { expanded = false }
            ) {
                DropdownMenuItem(
                    modifier = Modifier.testTag("PeriodDropdownMenuItem"),
                    text = { Text("Week") },
                    onClick = {
                        period="Week"
                        expanded = !expanded
                    }
                )
                DropdownMenuItem(
                    modifier = Modifier.testTag("PeriodDropdownMenuItem"),
                    text = { Text("Month") },
                    onClick = {
                        period="Month"
                        expanded = !expanded
                    }
                )
            }
...
        Box(
            modifier = Modifier
                .fillMaxWidth()
                .height(50.dp)
                .clickable { showBottomSheet = true }
                .padding(10.dp)
                .testTag("CategoryPicker")
            ,
            contentAlignment = Alignment.CenterStart
        ) {
            Text(text = selectedCategory?.name ?: "Select a Category")
        }

...

        OutlinedTextField(
            value = limit,
            onValueChange = { limit = it },
            label = { Text("Limit") },
            keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number),
            modifier = Modifier.fillMaxWidth().testTag("LimitField"),
            colors = TextFieldDefaults.colors(
                focusedIndicatorColor = secondTextColor,
                unfocusedIndicatorColor = mainTextColor)
        )

        Spacer(modifier = Modifier.height(10.dp))
...
        Box(
            modifier = Modifier
                .fillMaxWidth()
                .height(50.dp)
                .clickable { datePickerDialog.show() }
                .padding(10.dp)
                .testTag("DatePicker")
            ,
            contentAlignment = Alignment.CenterStart
        ) {
            Text(text = selectedDate.substringBeforeLast(("T")))
        }

...
                titleText = "Edit Goal"
            }
            Text(
                text = titleText,
                color = mainTextColor,
                style = Typography.titleLarge,
                modifier = Modifier.testTag("TitleText")
            )
            Spacer(modifier = Modifier.weight(1.0f))
            TextButton(onClick = { navController.popBackStack() },
                contentPadding = PaddingValues(
                    start = 5.dp,
                    top = 0.dp,
                    end = 0.dp,
                    bottom = 10.dp,
                ),
                modifier = Modifier.testTag("ClosePage")
            ) {
                Text("X",  style = Typography.titleLarge, color= Color(0xFF4B0C0C))
            }
        }

        @Suppress("UNCHECKED_CAST")
...
            }
            preloadErrorMessage != "" -> {
                Column(
                    modifier = Modifier
                        .fillMaxWidth()
                        .height(200.dp)
                        .testTag("ErrorMessage"),
                    horizontalAlignment = Alignment.CenterHorizontally,
                    verticalArrangement = Arrangement.Center
                )
                {
                    Text(text = preloadErrorMessage, color = MaterialTheme.colorScheme.error, style = Typography.headlineSmall)
                    Button(onClick = { preloadData() }, colors = ButtonDefaults.buttonColors(containerColor = mainTextColor)) { Text("Retry") }
...
                                errorMessage = errorMessage ?: ""
                                errorMessage += "Exception happened when adding goal. Please try again.\n"
                                isSaveButtonLoading = false
                            }
                        }
                    },
                    modifier = Modifier.fillMaxWidth().testTag("SaveButton"),
                    colors = ButtonDefaults.buttonColors(
                        Color(0xFF4B0C0C),
                    ),
                    enabled = !isLoading
                ) {
                    if (isSaveButtonLoading) {
...
