...
                            tint = secondaryIconColor
                        )
                    }
                    TextButton(
                        onClick = { onEditButtonClick(goal.id) },
                        shape = CircleShape,
                        modifier = Modifier.size(30.dp).testTag("EditButton"),
                        contentPadding = PaddingValues(0.dp)
                    ) {
                        Icon(
                            imageVector = Icons.Filled.Edit,
                            contentDescription = "edit",
                            modifier = Modifier.size(20.dp),
...
                )
                TextButton(
                    shape = CircleShape,
                    modifier = Modifier
                        .size(50.dp)
                        .padding(end = 12.dp, top = 12.dp)
                        .testTag("AddGoalButton")
                    ,
                    contentPadding = PaddingValues(0.dp),
                    onClick = {
                        dashboardNavController.navigate("addGoalScreen/${(-1)}")
                    },
                ) {
...
            isLoading -> {
                Column(
                    modifier = Modifier
                        .fillMaxWidth()
                        .background(mainBackgroundColor)
                        .height(900.dp)
                        .testTag("LoadingSpinner"),
                    horizontalAlignment = Alignment.CenterHorizontally,
                    verticalArrangement = Arrangement.Center
                )
                {
                    CircularProgressIndicator(
                        modifier = Modifier.size(80.dp),
...
                                .fillMaxWidth(),
                            horizontalArrangement = Arrangement.Center,
                        ) {
                            Button(
                                modifier = Modifier
                                    .padding(0.dp)
                                    .testTag("ToggleSpendingGoalsButton")
                                ,
                                onClick = {
                                    viewSpendingOrGoals = if(viewSpendingOrGoals == "View Goals") {
                                        "View Spending"
                                    } else {
                                        "View Goals"
...
